--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
   <h3>Select a sidebar option to view your data!</h3>
 </div>
 </div>
+<div id="lastUpdated"></div>
 
 <script>
     function openIDTable(evt, projectIDName) {
@@ -46,20 +47,10 @@
 </script>
 <!--<script type="text/javascript" src="../static/tableFormation.js"></script>-->
 <script type="text/javascript">
-	var logFiles = [];
-	// TODO fix this
-	{% for pd in project_data %}
-		logFiles.append({
-			"projectid": {{pd.projectid}},
-			"tag": {{pd.tag}},
-			"value": {{pd.value}},
-			"type": {{pd.type}},
-			"updated": {{pd.updated}}
-		});
-		console.log(logFiles);
-	{% endfor %}
+	var logFiles = {{ project_data | tojson }};
+
 	/*var logFiles = [{"projectid":"Natalie@","tag":"High Score","value":12,"type":"Integer","updated":1489149847877}, 
-    {"projectid":"Natalie@","tag":"High Score","value":10,"type":"Integer","updated":1489143847222}, {"projectid":"Katherine@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}, {"projectid":"Jeff@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222},];*/
+    {"projectid":"Natalie@","tag":"High Score","value":10,"type":"Integer","updated":1489143847222}, {"projectid":"Katherine@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}, {"projectid":"Jeff@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}];*/
     var tabs = document.getElementById("dynamic");
     var seen = new Set();
     // run through to set up and create all the tabs and tables
@@ -87,20 +78,19 @@
             row.insertCell(1).outerHTML = "<th>Value</th>";
             row.insertCell(2).outerHTML = "<th>Type</th>";
             row.insertCell(3).outerHTML = "<th>Last Accessed</th>";
-            row.insertCell(4).outerHTML = "<th>Random</th>"
+            row.insertCell(4).outerHTML = "<th>Random</th>";
         newDiv.appendChild(table);
         document.getElementById("container").appendChild(newDiv);
-        seen.add(currentid);
-    	}
+        seen.add(currentid);}
     }
     var lastUpdated = 1508702040068; //##LASTUPDATED##;
     var date = new Date();
     date.setTime(lastUpdated);
     document.getElementById('lastUpdated').innerHTML = 'Log was last updated ' + date;
     // Most recent to least recent
-    /*logFiles.sort(function (a, b) {
+    logFiles.sort(function (a, b) {
         return b.updated - a.updated;
-    });*/
+    });
     //document.getElementById("logHeader").innerHTML = 'Log Table for ' + logFiles[0].projectid;
     // Sets the tables within each of the tabs
     for (var i = 0; i < logFiles.length; i++) {
@@ -119,19 +109,7 @@
         dateColumn.innerHTML = date.toString();
         var randomCell = row.insertCell(4);
         randomCell.innerHTML = "Random";
-    };
+    }
 </script>
-<p id="lastUpdated"></p>
-      <table border = 1>
-         {% for pd in project_data %}
-         
-            <tr>
-               <th> {{ pd.projectid }} </th>
-               <td> {{ pd.value }} </td>
-               <td> {{ pd.updated }} </td>
-               <td> {{ pd.type }} </td>
-            </tr>
-         {% endfor %}
-      </table>
 </body>
 </html>
