--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -4,15 +4,154 @@
 <title>Cloud Page</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./cloud-style.css">
+<!--<link rel="stylesheet" href="../static/cloud-style.css">-->
+<style>
+header { padding: 1em; color: white; background-color: green; clear: left; text-align: center;}
+a { text-decoration: none; font-size: 125%; padding-right: 1em; padding-left: 2em; color: #000000;} 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: white;
+    font-family: Helvetica, sans-serif;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: black;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
+}
+
+/* The circles on the timeline */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    border: 4px solid #FF9F55;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+    left: 0;
+}
+
+/* Place the container to the right */
+.right {
+    left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: green;
+    position: relative;
+    border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media all and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+  
+  /* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+  
+  /* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+  
+  /* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
+  }
+}
+</style>
 </head>
 <body>
 
-<div class="container">
+<!--<div class="container">-->
 
 <header>
    <h1>CloudDB Log Page</h1>
 </header>
+
+
 
 <!-- Navigation Bar -->
 <div class="bar">
@@ -21,12 +160,51 @@
   <a href="cloud.html" class="bar-item">Cloud View</a>
 </div>
 
+
+<div class="timeline">
+  <div class="container left">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+  <div class="container left">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+  <div class="container right">
+    <div class="content">
+      <h2>Time</h2>
+      <p>Data</p>
+    </div>
+  </div>
+</div>
+
 <p id="lastUpdated"></p>
     <script type="text/javascript">
-        var logFiles = [];
-        var lastUpdated = 1508702040068;
+        var logFiles = [{"projectid":"Natalie@","tag":"High Score","value":12,"type":"Integer","updated":1489149847877}, 
+        {"projectid":"Natalie@","tag":"High Score","value":10,"type":"Integer","updated":1489143847222}, {"projectid":"Katherine@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}, {"projectid":"Jeff@","tag":"Money Spent","value":179,"type":"Integer","updated":1489153847222}];
         var date = new Date();
-        date.setTime(lastUpdated);
         document.getElementById('lastUpdated').innerHTML = 'Log was last updated ' + date;
         logFiles.sort(function (a, b) {
             return b.created - a.created;
