--- a/templates/header.html
+++ b/templates/header.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../static/cloud-style.css">
+    <!--<meta http-equiv="refresh" content="60">-->
 </head>
 <body>
 <header>
