--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>CloudDB Log</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/cloud-style.css">
-</head>
-<body>
-<header>
-   <h1>CloudDB Log Page</h1>
-</header>
-<!-- Navigation Bar -->
-<div class="bar">
-  <a href="http://ai2.appinventor.mit.edu/" class="bar-item">App Inventor</a>
-  <a href="index.html" class="bar-item">Log View</a>
-  <a href="cloud.html" class="bar-item">Cloud View</a>
-</div>
+{% include 'header.html' %}
 
 <div class="container" id="container">
 <div id = "dynamic" class="tab">
@@ -83,9 +66,7 @@
         document.getElementById("container").appendChild(newDiv);
         seen.add(currentid);}
     }
-    var lastUpdated = 1508702040068; //##LASTUPDATED##;
     var date = new Date();
-    date.setTime(lastUpdated);
     document.getElementById('lastUpdated').innerHTML = 'Log was last updated ' + date;
     // Most recent to least recent
     logFiles.sort(function (a, b) {
