--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     <title>CloudDB Log</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../static/cloud-style.css">
+    <!--<link rel="stylesheet" href="../static/cloud-style.css">-->
     <!--<meta http-equiv="refresh" content="60">-->
 </head>
 <body>
@@ -14,6 +14,6 @@
 <!-- Navigation Bar -->
 <div class="bar">
   <a href="http://ai2.appinventor.mit.edu/" class="bar-item">App Inventor</a>
-  <a href="index.html" class="bar-item">Log View</a>
-  <a href="cloud.html" class="bar-item">Cloud View</a>
+  <a href="index" class="bar-item">Log View</a>
+  <a href="cloud" class="bar-item">Cloud View</a>
 </div>
