--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,50 @@
-{% include 'header.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>CloudDB Log</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<link rel="stylesheet" href="../static/cloud-style.css">-->
+    <!--<meta http-equiv="refresh" content="60">-->
+    <style type="text/css">
+    	html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
+		html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
+		article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
+		button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:bold}
+		hr{border:0;border-top:1px solid #eee;margin:20px 0}
+		html,h1,h2,h3,h5 {font-family: "Roboto";}
+		h4 {font-family: "Roboto"; font-size: 140%; font-style: bold; margin: 1; padding-right: 1em;}
+		div.container {width: 100%; border: 1px solid gray;}
+		div.tab {float: left; border: 1px solid #ccc; background-color: #f1f1f1; width: 20%; height: 300px; }
+		div.tab button { display: block;background-color: inherit;color: black; padding: 22px 16px; width: 100%; border: none; outline: none; text-align: left; cursor: pointer;transition: 0.3s;}
+		/*Hovering above tab*/
+		div.tab button:hover {background-color: #ddd;}
+		/* Active Tab*/
+		div.tab button.active {background-color: #ccc;}
+		.tabcontent {float: left; padding: 0px 12px; border: 1px solid #ccc; width: 80%; border-left: none; height: 300px;}
+		header { padding: 1em; color: black; background-color: #A4CE47; clear: left; text-align: center;}
+		nav { float: left; max-width: 200px; margin: 1; padding: 1em;}
+		nav ul { list-style-type: none; padding: 0; }
+		nav ul a {text-decoration: none;}
+		a { text-decoration: none; font-size: 125%; padding-right: 1em; padding-left: 2em; color: #000000;}       
+		article {margin-left: 170px; border-left: 1px solid gray; padding: 1em; overflow: hidden;}
+		body{font-family: "Roboto";}
+		table { border-collapse: collapse; }
+		td, th { border: 1px solid lightgray; padding: 3px 7px 2px 7px;}
+		th{text-align: left; padding-top: 5px; padding-bottom: 4px; background-color: Gray; color: #ffffff;}
+		td.stderr {color: Red;}
+    </style>
+</head>
+<body>
+<header>
+   <h1>CloudDB Log Page</h1>
+</header>
+<!-- Navigation Bar -->
+<div class="bar">
+  <a href="http://ai2.appinventor.mit.edu/" class="bar-item">App Inventor</a>
+  <a href="index" class="bar-item">Log View</a>
+  <a href="cloud" class="bar-item">Cloud View</a>
+</div>
 
 <div class="container" id="container">
 <div id = "dynamic" class="tab">
@@ -61,7 +107,6 @@
             row.insertCell(1).outerHTML = "<th>Value</th>";
             row.insertCell(2).outerHTML = "<th>Type</th>";
             row.insertCell(3).outerHTML = "<th>Last Accessed</th>";
-            row.insertCell(4).outerHTML = "<th>Random</th>";
         newDiv.appendChild(table);
         document.getElementById("container").appendChild(newDiv);
         seen.add(currentid);}
@@ -89,8 +134,6 @@
         typeColumn.setAttribute('class', "Integer"); //logFile.type);
         var dateColumn = row.insertCell(3);
         dateColumn.innerHTML = date.toLocaleString("en-US", options);
-        var randomCell = row.insertCell(4);
-        randomCell.innerHTML = "Random";
     }
 </script>
 </body>
