--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -6,162 +6,184 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--<link rel="stylesheet" href="../static/cloud-style.css">-->
 <style>
-header { padding: 1em; color: black; background-color: #A4CE47; clear: left; text-align: center;}
-a { text-decoration: none; font-size: 125%; padding-right: 2em; padding-left: 2em; color: #000000;} 
-.bar {
-    border: 1px solid gray;
-    text-align: center;
-}
-* {
-    box-sizing: border-box;
-}
-hr{border:0;border-top:1px solid #eee;margin:20px 0}
+    header { padding: 1em; color: black; background-color: #A4CE47; clear: left; text-align: center;}
+    a { text-decoration: none; font-size: 125%; padding-right: 2em; padding-left: 2em; color: #808080;} 
+    p{font-family: "Roboto"; font-size:100%;}
+    .bar {
+        border: 1px solid gray;
+        text-align: center;
+        background-color: #F2F2F2;
+    }
+    * {
+        box-sizing: border-box;
+    }
+    hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
-h2 {font-family: "Roboto"; font-size: 110%;}
+    h2 {font-family: "Roboto"; font-size: 110%;}
 
-body {
-    background-color: white;
-    font-family: "Roboto";
-}
+    body {
+        background-color: white;
+        font-family: "Roboto";
+    }
 
-/* The actual timeline (the vertical ruler) */
-.timeline {
-    position: relative;
-    max-width: 1200px;
-    margin: 0 auto;
-}
+    /* The actual timeline (the vertical ruler) */
+    .timeline {
+        padding-top: 40px;
+        padding-bottom: 20px;
+        position: relative;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
 
-/* The actual timeline (the vertical ruler) */
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    background-color: black;
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -3px;
-}
-/*Content*/
-.container {
-    padding: 10px 40px;
-    position: relative;
-    background-color: inherit;
-    width: 50%;
-}
+    /* The actual timeline (the vertical ruler) */
+    .timeline::after {
+        content: '';
+        position: absolute;
+        width: 6px;
+        background-color: black;
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        margin-left: -3px;
+    }
+    /* The container that holds the actual content*/
+    .container {
+        padding: 10px 40px;
+        position: relative;
+        background-color: inherit;
+        width: 50%;
+    }
 
-/* Timeline circles */
-.container::after {
-    content: '';
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    right: -17px;
-    background:url('../static/app_inventor.png') no-repeat center #FFF;
-    border: 4px solid #F78D35;
-    top: 15px;
-    border-radius: 50%;
-    z-index: 1;
-}
+    /* The nice App Inventor circles on the central line */
+    .container::after {
+        content: '';
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        right: -17px;
+        background:url('../static/app_inventor.png') no-repeat center #FFF;
+        border: 4px solid #F78D35;
+        top: 15px;
+        border-radius: 50%;
+        z-index: 1;
+    }
 
-/* Place the container to the left */
-.left {
-    left: 0;
-}
+    /* Place the container with the data content to the left */
+    .left {
+        left: 0;
+    }
 
-/* Place the container to the right */
-.right {
-    left: 50%;
-}
+    /* Place the container with the data content to the right */
+    .right {
+        left: 50%;
+    }
 
-/* Add arrows to the left container (pointing right) */
-.left::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    right: 30px;
-    border: medium solid white;
-    border-width: 10px 0 10px 10px;
-    border-color: transparent transparent transparent white;
-}
+    /* Arrows next to left container pointing right (into the timeline) */
+    .left::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        right: 30px;
+        border: medium solid white;
+        border-width: 10px 0 10px 10px;
+        border-color: transparent transparent transparent #CBDCB4;
+    }
 
-/* Add arrows to the right container (pointing left) */
-.right::before {
-    content: " ";
-    height: 0;
-    position: absolute;
-    top: 22px;
-    width: 0;
-    z-index: 1;
-    left: 30px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-}
+    /* Arrows next to right container pointing left (into the timeline) */
+    .right::before {
+        content: " ";
+        height: 0;
+        position: absolute;
+        top: 22px;
+        width: 0;
+        z-index: 1;
+        left: 30px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent #CBDCB4 transparent transparent;
+    }
 
-/* Fix the circle for containers on the right side */
-.right::after {
-    left: -16px;
-}
+    /* Fix the circle for containers on the right side */
+    .right::after {
+        left: -16px;
+    }
 
-/* The actual content */
-.content {
-    padding: 20px 30px;
-    background-color: #A4CE47;
-    position: relative;
-    border-radius: 6px;
-}
+    /* The actual content */
+    .content {
+        padding: 10px;
+        text-align: center;
+        background-color: #CBDCB4;
+        position: relative;
+        border-radius: 6px;
+    }
 
-@media all and (max-width: 600px) {
-  /* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
-  }
-  
-  /* Full-width containers */
-  .container {
-    width: 100%;
-    padding-left: 25px;
-    padding-right: 25px;
-  }
-  
-  /* Make sure that all arrows are pointing leftwards */
-  .container::before {
-    left: 60px;
-    border: medium solid white;
-    border-width: 10px 10px 10px 0;
-    border-color: transparent white transparent transparent;
-  }
+    @media all and (max-width: 600px) {
+      /* Place the timelime to the left */
+      .timeline::after {
+        left: 31px;
+      }
+      
+      /* Full-width containers */
+      .container {
+        width: 100%;
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+      
+      /* Make sure that all arrows are pointing leftwards */
+      .container::before {
+        left: 60px;
+        border: medium solid white;
+        border-width: 10px 10px 10px 0;
+        border-color: transparent white transparent transparent;
+      }
 
-  /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-    left: 15px;
-  }
-  
-  /* Make all right containers behave like the left ones */
-  .right {
-    left: 0%;
-  }
-}
-  .timeline-start,
-  .timeline-end {
-  display: table;
-  font-family: "Roboto";
-  font-size: 16px;
-  font-weight: 800;
-  text-transform: uppercase;
-  background: #A4CE47;
-  padding: 15px 15px;
-  color: #000;
-  max-width: 10%;
-  width: 100%;
-  text-align: center;
-  margin: 0 auto;
-  border-radius: 6px;
-}
+      /* Make sure all circles are at the same spot */
+      .left::after, .right::after {
+        left: 15px;
+      }
+      
+      /* Make all right containers behave like the left ones */
+      .right {
+        left: 0%;
+      }
+    }
+      .timeline-start {
+          display: table;
+          font-family: "Roboto";
+          font-size: 16px;
+          font-weight: 800;
+          text-transform: uppercase;
+          background: #FAFAFA;
+          padding: 10px 10px;
+          color: #000;
+          max-width: 10%;
+          width: 100%;
+          text-align: center;
+          margin: 0 auto;
+          margin-top: 20px;
+          border-radius: 6px;
+          border: 1px solid black;
+    }
+      .timeline-end {
+          display: table;
+          font-family: "Roboto";
+          font-size: 16px;
+          font-weight: 800;
+          text-transform: uppercase;
+          background: #FAFAFA;
+          padding: 10px 10px;
+          color: #000;
+          max-width: 10%;
+          width: 100%;
+          text-align: center;
+          margin: 0 auto;
+          border-radius: 6px;
+          border: 1px solid black;
+    }
 
 </style>
 </head>
