Added index/log autorefresh on zadd capabilities

--- a/templates/cloud.html
+++ b/templates/cloud.html
@@ -208,19 +208,6 @@
 <div id = "timeline" class="timeline"></div>
 <div id = "tend" class="timeline-end">End</div>
 
-<button onclick="refresh()">Refresh</button>
-
-
-<!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
-    socket.on('connect', function() {
-        socket.emit('connect', {data: 'I\'m connected!'});
-    });
-    socket.on('exchangeData', function(msg) {
-        location.reload();
-    });
-</script>-->
 <pre id="out"></pre>
 
 <p id="lastUpdated"></p>
@@ -231,7 +218,7 @@
             window.location.reload(true);
         if (e.data == 'stream_end') { source.close() };
         });*/
-        var timeline = document.getElementById("timeline");
+        //var timeline = document.getElementById("timeline");
         source.onmessage = function(e) {
             window.location.reload(true);
             /*if (e.data != "1"){
