--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,13 @@
 		html,h1,h2,h3,h5 {font-family: "Roboto";}
 		h4 {font-family: "Roboto"; font-size: 140%; font-style: bold; margin: 1; padding-right: 1em;}
 		div.container {width: 100%; border: 1px solid gray;}
-		div.tab {float: left; border: 1px solid #ccc; background-color: #f1f1f1; width: 20%; height: 300px; }
+		div.tab {float: left; border: 1px solid #ccc; background-color: #f1f1f1; width: 20%; height: 600px; }
 		div.tab button { display: block;background-color: inherit;color: black; padding: 22px 16px; width: 100%; border: none; outline: none; text-align: left; cursor: pointer;transition: 0.3s;}
 		/*Hovering above tab*/
 		div.tab button:hover {background-color: #ddd;}
 		/* Active Tab*/
 		div.tab button.active {background-color: #ccc;}
-		.tabcontent {float: left; padding: 0px 12px; border: 1px solid #ccc; width: 80%; border-left: none; height: 300px;}
+		.tabcontent {float: left; padding: 0px 12px; border: 1px solid #ccc; width: 80%; border-left: none; height: 600px;}
 		header { padding: 1em; color: black; background-color: #A4CE47; clear: left; text-align: center;}
 		nav { float: left; max-width: 200px; margin: 1; padding: 1em;}
 		nav ul { list-style-type: none; padding: 0; }
@@ -63,6 +63,13 @@
 <div id="lastUpdated"></div>
 <button id="refresh" onclick="refresh()">Reload Page</button>
 
+<script type="text/javascript">
+    var source = new EventSource('/stream');
+    source.onmessage = function(e) {
+        window.location.reload(true);
+    };
+</script>
+
 <script>
     function openIDTable(evt, projectIDName) {
     var i, tabcontent, tablinks;
@@ -80,7 +87,7 @@
     // Get the element with id="defaultOpen" and click on it
     document.getElementById("defaultOpen").click();
     function refresh(){
-    	window.location.reload();
+    	window.location.reload(true);
     }
 </script>
 <!--<script type="text/javascript" src="../static/tableFormation.js"></script>-->
@@ -117,12 +124,12 @@
             row.insertCell(2).outerHTML = "<th>Type</th>";
             row.insertCell(3).outerHTML = "<th>Last Accessed</th>";
         newDiv.appendChild(table);
-        var refreshButton = document.createElement('button');
-    	refreshButton.setAttribute('onclick', "refreshBlock()");
-    	refreshButton.innerHTML = "Page location is " + window.location.href;
-    	function refreshBlock()
-    	{$('#' + currentid).load("/store #" + currentid);}
-    	newDiv.appendChild(refreshButton);
+        //var refreshButton = document.createElement('button');
+    	//refreshButton.setAttribute('onclick', "refreshBlock()");
+    	//refreshButton.innerHTML = "Page location is " + window.location.href;
+    	//function refreshBlock()
+    	//{$('#' + currentid).load("/store #" + currentid);}
+    	//newDiv.appendChild(refreshButton);
         document.getElementById("container").appendChild(newDiv);
         seen.add(currentid);}
     }
